src/test/resources/public/input/typechecking/fail/my_test_cases/my_fail03.jova
class Main {

  public int main() {
    return 0;
  }

  public String notPossible() {
    return "";
  }

}